app.css styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,155 @@
-.App { 
-  text-align: center; 
-} 
+/***** General Styles ******/
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+main {
+  font-family: 'Nunito', sans-serif;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  overflow-wrap: break-word;
+  margin: 15px;
+}
+  
+ul {
+  font-size: 18px;
+  list-style-type: none;
+  margin: 15px;
+  padding: 0 100px 0 0;
+  border-left: 2.5px solid #000000f7;
+}
+  
+li {
+  padding: 10px 0 5px 10px;
+  border-bottom: .5px solid #000000f7;
+}
+
+/***** Main Styles ******/
+
+.App-header {
+  font-family: 'Edu TAS Beginner', cursive;
+  font-stretch: semi-expanded;
+  font-size: 35px;
+  text-align: center;
+  margin: 50px 0 0 0;
+  text-decoration: underline darkgray 2.5px;
+  text-shadow: 0 0 5px #556b2f, 0 0 10px #556b2f, 0 0 5px #556b2f, 0 0 10px #556b2f, 0 0 5px #556b2f98, 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF
+}
+
+.App-footer {
+  font-family: 'Edu TAS Beginner', cursive;
+  font-stretch: semi-expanded;
+  text-align: end;
+  font-size: 20px;
+  margin: 50px;
+  text-decoration: underline darkgray 1px;
+}
+
+.shopping-list-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0 10px 0 10px;
+}
+
+.cancel-edit-button {
+  background-color: darkgray;
+  margin: 5px;
+  color: black;
+}
+
+.delete-button {
+  background-color: rgb(181, 22, 22);
+  margin: 5px;
+  color: rgb(214, 183, 183);
+}
+
+.submit-button {
+  background-color: rgb(8, 8, 8);
+  color: rgb(236, 227, 227);
+}
+
+.form-add {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 20px;
+}
+
+.form-add .form-row {
+  margin: 10px;
+}
+
+.form-add .item-name { 
+  width: 200px; 
+  height: 40px; 
+  font-size: 50%;
+}
+
+.form-add .quantity {
+  width: 200px; 
+  height: 40px; 
+  font-size: 50%;
+}
+
+.form-edit {
+  font-style: italic;
+  font-size: small;
+  display: flex;
+}
+
+
+/*** MEDIA STYLES ***/
+
+@media screen and (max-width: 768px) {
+
+  .form-add {
+      text-align: center;
+      font-size: 25px;
+      margin-top: 20px;
+  }
+
+  .form-add .item-name { 
+      width: 90%; 
+      height: 40%; 
+      font-size: 50%;
+  }
+
+  .form-add .quantity {
+      width: 90%; 
+      height: 40%; 
+      font-size: 50%;
+  }
+
+  ul {
+      margin: 5px;
+      padding: 0 45px 0 0;
+  }
+}
+
+@media screen and (max-width: 576px) {
+
+  main {
+      margin: 5px;
+  }
+
+  ul {
+      margin: 5px;
+      padding: 0 25px 0 0;
+      font-size: 15px;
+  }
+
+  .form-add {
+      text-align: center;
+      font-size: 15px;
+      margin-top: 20px;
+  }
+
+  .App-header {
+      font-size: large;
+  }
+
+  .App-footer {
+      font-size: 15px;
+      margin: 50px 25px 0 0;
+  }
+}
