--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@ ul {
   list-style-type: none;
   margin: 15px;
   padding: 0 100px 0 0;
-  border-left: 2.5px solid #000000f7;
+  border-left: 2.5px groove #000000f7;
 }
   
 li {
   padding: 10px 0 5px 10px;
-  border-bottom: .5px solid #000000f7;
+  border-bottom: .5px groove #000000f7;
 }
 
 /***** Main Styles ******/
@@ -33,15 +33,6 @@ li {
   text-align: center;
   margin: 50px 0 0 0;
   text-decoration: underline darkgray 2.5px;
-}
-
-.App-footer {
-  font-family: 'Courier New', Courier, monospace;
-  font-stretch: semi-expanded;
-  text-align: end;
-  font-size: 20px;
-  margin: 50px;
-  text-decoration: underline rgb(0, 0, 0) 1px;
 }
 
 .shopping-list-buttons {
@@ -144,10 +135,5 @@ li {
 
   .App-header {
       font-size: large;
-  }
-
-  .App-footer {
-      font-size: 15px;
-      margin: 50px 25px 0 0;
   }
 }
