--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@
 
 .App-header {
   color: #4b2003;
-  background-color: cornsilk; 
-  padding: 7px;
+  background-color: cornsilk;
+  padding: 15px 0px;
+  font-family: 'Times New Roman', Times, serif;
+  text-decoration-line: underline;
+}
+
+.body {
+  color: white;
+}
+
+button {
+ margin: 5px 4px 5px;
 }
