--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,7 @@
 }
 
 .App-header {
-  color: #4b2003;
-  background-color: cornsilk;
+  color: #e45656fe;
   padding: 15px 0px;
   font-family: 'Times New Roman', Times, serif;
   text-decoration-line: underline;
